--- a/addItem.html
+++ b/addItem.html
@@ -61,7 +61,7 @@
         </div>
             <br><br>
             <div class="panel-footer">
-                <a href="#">添加项目</a>
+                <a href="showDB.html">添加项目</a>
             </div>
         </div>
     </div>
