--- a/showDB.html
+++ b/showDB.html
@@ -31,7 +31,7 @@
                 </tbody>
             </table>
             <div class="panel-footer">
-                <a href="#">添加项目</a>
+                <a href="addItem.html">添加项目</a>
             </div>
         </div>
     </div>
