--- a/learn/showDB.html
+++ b/learn/showDB.html
@@ -1,9 +1,15 @@
+<!--
+  ~ Copyright (c) holk 2020.
+  ~ by han gao
+  ~ holk@holk.tech
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>showDB</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
