--- a/learn/初探ajax.html
+++ b/learn/初探ajax.html
@@ -1,3 +1,9 @@
+<!--
+  ~ Copyright (c) holk 2020.
+  ~ by han gao
+  ~ holk@holk.tech
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +14,7 @@
 <button id="btn">点击用GET方法加载ajax</button>
 <button id="btn1">点击用POST方法加载ajax</button>
 <br><br>
-<form  id="fm" action="get_test.php" method="get">
+<form id="fm" action="get_test.php" method="get">
     <label>
         <input type="text" name="username" placeholder="username">
         <input type="text" name="age" placeholder="age">
@@ -17,7 +23,7 @@
     <input type="submit" value="GET提交">
 </form>
 <p>上面是get，下面是post</p>
-<form  id="fm1" action="get_test.php" method="post">
+<form id="fm1" action="get_test.php" method="post">
     <label>
         <input type="text" name="username" placeholder="username">
         <input type="text" name="age" placeholder="age">
