--- a/learn/addItem.html
+++ b/learn/addItem.html
@@ -9,10 +9,22 @@
 <head>
     <meta charset="UTF-8">
     <title>addItem</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
+
+<div style="align-items: center">
+    <div style="width: 80%;height: 90%;margin: auto">
+        <div class="jumbotron">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr>
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading">
